# data-warehouse

./: .gitignore  .slugignore  CLAUDE.MD  CLAUDE.md  Procfile  README.md  raw_funnelfox.py  requirements.txt  stripe.sql
Linked Data/: data_matching_schema.md
dashboard/: .gitignore  README.md  app.py  requirements.txt
dbt/: QUICKSTART.md  README.md  dbt_project.yml  profiles.yml.example  run_dbt.bat  run_dbt.py  tmpclaude-79c4-cwd
deploy/: 01_setup_pipeline.sh  02_setup_metabase.sh  run_pipeline.sh
docs/: dashboard-metrics-report.md  data-integration.md  marketing-performance-metrics.md
meltano/: catalog.json  meltano.yml  reset_state.json  run_amplitude_sanitized.bat  run_pipeline.bat  run_pipeline.sh  sanitize_unicode.py
meltano/tap-chargeback/: pyproject.toml
meltano/tap-chargeback/tap_chargeback/: __init__.py  client.py  streams.py  tap.py
meltano/tap-ethoca/: pyproject.toml
meltano/tap-ethoca/tap_ethoca/: __init__.py  client.py  streams.py  tap.py
meltano/tap-funnelfox/: pyproject.toml
meltano/tap-funnelfox/tap_funnelfox/: __init__.py  client.py  streams.py  tap.py
raw_funnelfox/: funnels.json  sessions.json  subscriptions.json
reluvia/: meltano.yml  run_pipeline.bat  run_pipeline.sh
reports/: payment_validation_report_2026-01-14.md
schemas/: funnelfox_schema.sql
scripts/: check_ad_id_match.py  check_amplitude_attribution.py  check_campaign_linkage.py  check_fb_funnel_match.py  check_impressions.py  check_origin.py  check_sessions_gaps.py  check_subscriptions.py  check_utm_params.py  compare_facebook_daily.py  compare_facebook_schemas.py  compare_facebook_tables.py  compare_marketing_export.sql  compare_spend.py  compare_spend.sql  compare_spend_detail.py  diagnose_charges_without_invoice.py  diagnose_linkage.py  diagnose_marketing_vs_payment_revenue.py  diagnose_other_actions.py  diagnose_price_difference.py  diagnose_purchases.py  diagnose_revenue.py  diagnose_revenue_attribution.sql  diagnose_revenue_matching.py  extract_funnel_data.py  funnel_conversion_analysis.py  (+8 more)
(+41 files in other folders)
