[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tap-chargeback"
version = "0.1.0"
description = "Singer tap for Chargeback.io alerts (Ethoca, Verifi CDRN, RDR), built with the Meltano SDK"
authors = ["Reluvia <dev@reluvia.com>"]
keywords = ["ELT", "Chargeback", "Ethoca", "Verifi", "Singer", "Meltano"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
singer-sdk = ">=0.36.0"
requests = ">=2.31.0"

[tool.poetry.scripts]
tap-chargeback = "tap_chargeback.tap:TapChargeback.cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
