[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tap-funnelfox"
version = "0.1.0"
description = "Singer tap for FunnelFox API, built with the Meltano SDK"
authors = ["Reluvia <dev@reluvia.com>"]
keywords = ["ELT", "FunnelFox", "Singer", "Meltano"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
singer-sdk = ">=0.36.0"
requests = ">=2.31.0"

[tool.poetry.scripts]
tap-funnelfox = "tap_funnelfox.tap:TapFunnelFox.cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
